[metadata]
name = zmqc
author = Zachary Voase
author-email = z@zacharyvoase.com
summary = A small but powerful command-line interface to ØMQ.
description-file = 
	README.md
home-page = http://github.com/zacharyvoase/zmqc
requires-python = >=2.6
classifier = 
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Information Technology
        License :: Freeware
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7

[files]
packages = 
	lib/zmqc

[entry_points]
console_scripts =
            zmqc = zmqc:main
